- Criando pagina apple_pay - pequenos ajustes

--- a/apple_pay.html
+++ b/apple_pay.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8"/>
-        <title>*** Avaliação *** </title>
+        <title>*** Apple Pay *** </title>
         <link rel="stylesheet" type="text/css" href="estilo_projeto.css">
         <script language="javascript" src="funcoes.js"></script>
     </head>
@@ -24,51 +24,33 @@
                 </hgroup>
                 <img id="icone" src="img/apple_logo.png" >
 
+
             </header>
 
             <section id="corpo">
                 <h3>Avaliação</h3>
                 <p>Em um evento especial realizado no dia 9 de setembro, a Apple mostrou para a imprensa e para os consumidores os detalhes de seus novos smartphones: <span style="font-weight: bold;">iPhone 6</span>  e <span style="font-weight: bold;">iPhone 6 Plus</span>. Estes aparelhos surgem para substituir os iPhone 5S no topo da linha da fabricante.</p>
+                <p>Toca Video MP4</p>
+
             </section>
 
-            <aside id="lateral">
+        </section>
 
-                <div id="wrap">
-                    <div id="notas">
-                        <p class="materia aprovado nota-10">
-                            <span class="barra"></span>
-                            <span class="nome">DESIGN</span>
-                            <span class="valor">10</span>
-                        </p>
-                        <p class="materia aprovado nota-9">
-                            <span class="barra"></span>
-                            <span class="nome">DESEMPENHO</span>
-                            <span class="valor">9</span>
-                        </p>
-                        <p class="materia media nota-7">
-                            <span class="barra"></span>
-                            <span class="nome">TELA</span>
-                            <span class="valor">7</span>
-                        </p>
-                        <p class="materia media nota-5">
-                            <span class="barra"></span>
-                            <span class="nome">CAMERA</span>
-                            <span class="valor">5</span>
-                        </p>
-                        <p class="materia reprovado nota-3">
-                            <span class="barra"></span>
-                            <span class="nome">CUSTO-BENEFICIO</span>
-                            <span class="valor">3</span>
-                        </p>
-                    </div>
+        <aside id="lateral">
+                <video id="filme2" controls="controls" autoplay="true" loop="true">
+                    <source src="midia/apple-pay.mp4" type="video/mp4"/>
+                </video>
 
-                </div>
+                <img id="adjTV2" src="img/televisao.jpg" >
 
-            </aside>
-            <footer id="rodape">
-                <p>Pós-graduação em JAVA - Módulo: Web Design
-                    Turma 2015.1</p>
-            </footer>
-        </div>
-    </body>
+
+        </aside>
+
+        <footer id="rodape">
+            <p>Pós-graduação em JAVA - Módulo: Web Design
+                Turma 2015.1</p>
+        </footer>
+    </div>
+</body>
 </html>
+        
