--- a/avaliacao.html
+++ b/avaliacao.html
@@ -13,7 +13,7 @@
                     <ul>
                         <a href="index.html"><li onMouseMove="alteraFoto('img/apple_logo.png')"> Página inicial</li></a>
                         <a href="avaliacao.html"><li	onMouseMove="alteraFoto('img/iphone.png')" onMouseOut="alteraFoto('img/apple_logo.png')">iPhone</li></a>
-                        <li	onMouseMove="alteraFoto('img/apple_pay.jpg')"onMouseOut="alteraFoto('img/apple_logo.png')">Apple Pay</li>
+                        <a href="apple_pay.html"><li	onMouseMove="alteraFoto('img/apple_pay.jpg')"onMouseOut="alteraFoto('img/apple_logo.png')">Apple Pay</li></a>
                         <a href="multimidia.html"><li	onMouseMove="alteraFoto('img/multimidia.png')"onMouseOut="alteraFoto('img/apple_logo.png')">Multimídia</li></a>
                         <li	onMouseMove="alteraFoto('img/fale_conosco.png')"onMouseOut="alteraFoto('img/apple_logo.png')">Fale conosco</li>
                     </ul>
