--- a/apple_pay.html
+++ b/apple_pay.html
@@ -11,18 +11,18 @@
             <header id="cabecalho">
                 <nav id="menu">
                     <ul>
-                        <a href="index.html"><li onMouseMove="alteraFoto('img/apple_logo.png')"> Página inicial</li></a>
-                        <a href="avaliacao.html"><li	onMouseMove="alteraFoto('img/iphone.png')" onMouseOut="alteraFoto('img/apple_logo.png')">iPhone</li></a>
-                        <a href="apple_pay.html"><li	onMouseMove="alteraFoto('img/apple_pay.jpg')"onMouseOut="alteraFoto('img/apple_logo.png')">Apple Pay</li></a>
-                        <a href="multimidia.html"><li	onMouseMove="alteraFoto('img/multimidia.png')"onMouseOut="alteraFoto('img/apple_logo.png')">Multimídia</li></a>
-                        <li	onMouseMove="alteraFoto('img/fale_conosco.png')"onMouseOut="alteraFoto('img/apple_logo.png')">Fale conosco</li>
+                        <a href="index.html"><li onMouseMove="alteraFoto('img/apple_logo.png')" onMouseOut="alteraFoto('img/apple_pay.jpg')"> Página inicial</li></a>
+                        <a href="avaliacao.html"><li	onMouseMove="alteraFoto('img/iphone.png')" onMouseOut="alteraFoto('img/apple_pay.jpg')">iPhone</li></a>
+                        <a href="apple_pay.html"><li	onMouseMove="alteraFoto('img/apple_pay.jpg')"onMouseOut="alteraFoto('img/apple_pay.jpg')">Apple Pay</li></a>
+                        <a href="multimidia.html"><li	onMouseMove="alteraFoto('img/multimidia.png')"onMouseOut="alteraFoto('img/apple_pay.jpg')">Multimídia</li></a>
+                        <li	onMouseMove="alteraFoto('img/fale_conosco.png')"onMouseOut="alteraFoto('img/apple_pay.jpg')">Fale conosco</li>
                     </ul>
                 </nav>
                 <hgroup>
                     <h1>A revolução já chegou!</h1>
                     <h2>Tudo sobre o iPhone 6, iPhone 6 Plus e Apple Watch </h2>
                 </hgroup>
-                <img id="icone" src="img/apple_logo.png" >
+                <img id="icone" src="img/apple_pay.jpg" >
 
 
             </header>
@@ -34,23 +34,21 @@
 
             </section>
 
-        </section>
+            <aside id="lateral">
 
-        <aside id="lateral">
+                <img id="adjTV2" src="img/televisao.jpg" >
+
                 <video id="filme2" controls="controls" autoplay="true" loop="true">
                     <source src="midia/apple-pay.mp4" type="video/mp4"/>
                 </video>
 
-                <img id="adjTV2" src="img/televisao.jpg" >
 
+            </aside>
 
-        </aside>
-
-        <footer id="rodape">
-            <p>Pós-graduação em JAVA - Módulo: Web Design
-                Turma 2015.1</p>
-        </footer>
-    </div>
-</body>
+            <footer id="rodape">
+                <p>Pós-graduação em JAVA - Módulo: Web Design
+                    Turma 2015.1</p>
+            </footer>
+        </div>
+    </body>
 </html>
-        
