--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
 
 
-                <table width="300" >
+                <table>
                     <caption> Novos Iphones (em US$)<span style="font-size:10px">  Fonte: Apple</span></caption> 
 
                     <tr>
-                        <th>País </th>
+                        <th>País</th>
                         <th>Iphone6</th>
                         <th>Iphone6 Plus</th>
                     </tr>
@@ -58,53 +58,70 @@
 
                     <tr class="cinza">
                         <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>1.242</td>
+                        <td>1.397</td>
                     </tr>
                     <tr class="bold">
-                        <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>Italia</td>
+                        <td>908</td>
+                        <td>1.045</td>
                     </tr>
                     <tr class="cinza">
-                        <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>Franca</td>
+                        <td>883</td>
+                        <td>1.008</td>
                     </tr>
                     <tr class="bold">
-                        <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>Portugal</td>
+                        <td>871</td>
+                        <td>995</td>
                     </tr>
                     <tr class="cinza">
-                        <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>Alemanha</td>
+                        <td>871</td>
+                        <td>995</td>
                     </tr>
                     <tr class="bold">
-                        <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>Espanha</td>
+                        <td>871</td>
+                        <td>995</td>
                     </tr>
                     <tr class="cinza">
-                        <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>China</td>
+                        <td>863</td>
+                        <td>993</td>
                     </tr>
                     <tr class="bold">
-                        <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>Reino Unido</td>
+                        <td>848</td>
+                        <td>974</td>
                     </tr>
                     <tr class="cinza">
-                        <td>Brasil</td>
-                        <td>1000</td>
-                        <td>500</td>
+                        <td>Australia</td>
+                        <td>759</td>
+                        <td>873</td>
+                    </tr>
+                    <tr class="bold">
+                        <td>Russia</td>
+                        <td>691</td>
+                        <td>799</td>
+                    </tr>
+                    <tr class="cinza">
+                        <td>Canada</td>
+                        <td>662</td>
+                        <td>759</td>
+                    </tr>
+                    <tr class="bold">
+                        <td>Estados Unidos</td>
+                        <td>649</td>
+                        <td>749</td>
+                    </tr>
+                    <tr class="cinza">
+                        <td>Japao</td>
+                        <td>587</td>
+                        <td>690</td>
                     </tr>
                 </table>
-
-                </table>
-
 
             </aside>
             <footer id="rodape">
