--- a/multimidia.html
+++ b/multimidia.html
@@ -11,18 +11,18 @@
             <header id="cabecalho">
                 <nav id="menu">
                     <ul>
-                         <a href="index.html"><li onMouseMove="alteraFoto('img/apple_logo.png')"> Página inicial</li></a>
-                        <a href="avaliacao.html"><li	onMouseMove="alteraFoto('img/iphone.png')" onMouseOut="alteraFoto('img/apple_logo.png')">iPhone</li></a>
-                        <a href="apple_pay.html"><li	onMouseMove="alteraFoto('img/apple_pay.jpg')"onMouseOut="alteraFoto('img/apple_logo.png')">Apple Pay</li></a>
-                        <a href="multimidia.html"><li	onMouseMove="alteraFoto('img/multimidia.png')"onMouseOut="alteraFoto('img/apple_logo.png')">Multimídia</li></a>
-                        <li	onMouseMove="alteraFoto('img/fale_conosco.png')"onMouseOut="alteraFoto('img/apple_logo.png')">Fale conosco</li>
+                         <a href="index.html"><li onMouseMove="alteraFoto('img/apple_logo.png')" onMouseOut="alteraFoto('img/multimidia.png')"> Página inicial</li></a>
+                        <a href="avaliacao.html"><li	onMouseMove="alteraFoto('img/iphone.png')" onMouseOut="alteraFoto('img/multimidia.png')">iPhone</li></a>
+                        <a href="apple_pay.html"><li	onMouseMove="alteraFoto('img/apple_pay.jpg')"onMouseOut="alteraFoto('img/multimidia.png')">Apple Pay</li></a>
+                        <a href="multimidia.html"><li	onMouseMove="alteraFoto('img/multimidia.png')"onMouseOut="alteraFoto('img/multimidia.png')">Multimídia</li></a>
+                        <li	onMouseMove="alteraFoto('img/fale_conosco.png')"onMouseOut="alteraFoto('img/multimidia.png')">Fale conosco</li>
                    </ul>
                 </nav>
                 <hgroup>
                     <h1>A revolução já chegou!</h1>
                     <h2>Tudo sobre o iPhone 6, iPhone 6 Plus e Apple Watch </h2>
                 </hgroup>
-                <img id="icone" src="img/apple_logo.png" >
+                <img id="icone" src="img/multimidia.png" >
 
 
             </header>
@@ -30,15 +30,13 @@
             <section id="corpo">
                 <p>Toca Video MP4</p>
 
-                <video id="filme" controls="controls" autoplay="true" loop="true">
+                <img id="adjTV" src="img/televisao.jpg" >
+
+                <video id="filme" controls="controls">
                     <source src="midia/apple-pay.mp4" type="video/mp4"/>
                 </video>
 
-                <img id="adjTV" src="img/televisao.jpg" >
-
             </section>
-
-        </section>
 
         <aside id="lateral">
             <p>Toca Música MP3</p>
