--- a/apple_pay.html
+++ b/apple_pay.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8"/>
         <title>*** Apple Pay *** </title>
-        <link rel="stylesheet" type="text/css" href="estilo_projeto.css">
-        <script language="javascript" src="funcoes.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/estilo_projeto.css">
+        <script language="javascript" src="js/funcoes.js"></script>
     </head>
     <body>
         <div id="interface">
