--- a/multimidia.html
+++ b/multimidia.html
@@ -11,12 +11,12 @@
             <header id="cabecalho">
                 <nav id="menu">
                     <ul>
-                         <a href="index.html"><li onMouseMove="alteraFoto('img/apple_logo.png')" onMouseOut="alteraFoto('img/multimidia.png')"> Página inicial</li></a>
-                        <a href="avaliacao.html"><li	onMouseMove="alteraFoto('img/iphone.png')" onMouseOut="alteraFoto('img/multimidia.png')">iPhone</li></a>
-                        <a href="apple_pay.html"><li	onMouseMove="alteraFoto('img/apple_pay.jpg')"onMouseOut="alteraFoto('img/multimidia.png')">Apple Pay</li></a>
-                        <a href="multimidia.html"><li	onMouseMove="alteraFoto('img/multimidia.png')"onMouseOut="alteraFoto('img/multimidia.png')">Multimídia</li></a>
-                        <li	onMouseMove="alteraFoto('img/fale_conosco.png')"onMouseOut="alteraFoto('img/multimidia.png')">Fale conosco</li>
-                   </ul>
+                        <a href="index.html"><li onMouseMove="alteraFoto('img/apple_logo.png')" onMouseOut="alteraFoto('img/apple_logo.png')"> Página inicial</li></a>
+                        <a href="avaliacao.html"><li onMouseMove="alteraFoto('img/iphone.png')" onMouseOut="alteraFoto('img/apple_logo.png')">iPhone</li></a>
+                        <a href="apple_pay.html"><li onMouseMove="alteraFoto('img/apple_pay.jpg')"onMouseOut="alteraFoto('img/apple_logo.png')">Apple Pay</li></a>
+                        <a href="multimidia.html"><li onMouseMove="alteraFoto('img/multimidia.png')"onMouseOut="alteraFoto('img/apple_logo.png')">Multimídia</li></a>
+                        <li onMouseMove="alteraFoto('img/fale_conosco.png')"onMouseOut="alteraFoto('img/apple_logo.png')">Fale conosco</li>
+                    </ul>
                 </nav>
                 <hgroup>
                     <h1>A revolução já chegou!</h1>
@@ -38,22 +38,21 @@
 
             </section>
 
-        <aside id="lateral">
-            <p>Toca Música MP3</p>
+            <aside id="lateral">
+                <p>Toca Música MP3</p>
 
-            <img id="adjRad" src="img/radio.jpg" >
+                <img id="adjRad" src="img/radio.jpg" >
 
-            <audio id="musica" controls="controls">
-                <source src="midia/foster-the-people.mp3" type="audio/mpeg"/>
-            </audio>
+                <audio id="musica" controls="controls">
+                    <source src="midia/foster-the-people.mp3" type="audio/mpeg"/>
+                </audio>
 
-        </aside>
+            </aside>
 
-        <footer id="rodape">
-            <p>Pós-graduação em JAVA - Módulo: Web Design
-                Turma 2015.1</p>
-        </footer>
-    </div>
-</body>
+            <footer id="rodape">
+                <p>Pós-graduação em JAVA - Módulo: Web Design
+                    Turma 2015.1</p>
+            </footer>
+        </div>
+    </body>
 </html>
-        
